# Menphina

./: .gitignore  CMakeLists.txt  README.md  build.sh
configured_files/: CMakeLists.txt  config.hpp.in
include/menphina/: appconfig.hpp  exec.hpp  exec_configured.hpp  exec_create_config.hpp  execution.hpp  executions.hpp  json.hpp  m_exception.hpp  platform.hpp  util.hpp
src/: CMakeLists.txt  appconfig.cpp  exec.cpp  exec_configured.cpp  exec_create_config.cpp  json.cpp  m_exception.cpp  main.cpp  platform.cpp  util.cpp
